zz-out/pass14_run2/zz-scripts/chapter02/plot_fig03_relative_errors.err
  File "/home/jplal/MCGT/zz-scripts/chapter02/plot_fig03_relative_errors.py", line 80
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
